--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./public/css/main.css" />
+    <link rel="stylesheet" href="./dist/css/main.css" />
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="" />
     <link rel="canonical" href="" />
@@ -73,7 +73,7 @@
         </header>
         <section class="hero">
             <div class="hero__preview">
-                <div class="hero__img" style="background-image: url('./public/img/image 2.png')">
+                <div class="hero__img" style="background-image: url('./dist/img/image 2.png')">
                     <div class="container">
                         <div class="hero__wrapper">
                             <span class="hero__eyebrow">Healthy lifestyle</span>
@@ -197,7 +197,7 @@
                             ultrices id diam elit amet. Lacinia cursus morbi dui vulputate.</p>
                     </div>
                     <figure class="article__figure">
-                        <img loading="lazy" src="./public/img/image 36.png"
+                        <img loading="lazy" src="./dist/img/image 36.png"
                             alt="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat et feugiat auctor mauris nisi, pellentesque sagittis. In pulvinar quam ut varius ultrices id diam elit amet. Lacinia Feugiat et Lorem ipsum dolor sit amet, consectetur adipiscing elit.">
                         <figcaption class="image-credit">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                             Feugiat et feugiat auctor mauris nisi, pellentesque sagittis. In pulvinar quam ut varius
@@ -221,7 +221,7 @@
                         <blockquote class="blockquote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat
                             et feugiat auctor mauris nisi, pellentesque</blockquote>
                         <figure class="article__figure">
-                            <img loading="lazy" src="./public/img/image 4.png" alt="Samples Quality chart">
+                            <img loading="lazy" src="./dist/img/image 4.png" alt="Samples Quality chart">
                         </figure>
                     </div>
                     <div class="article__subhead-section">
@@ -411,7 +411,7 @@
                                 <div class="tabs__groups tabs__groups--active" data-panel>
                                     <div class="tab__group">
                                         <img loading="lazy" class="tab__group__image" alt=""
-                                            src="./public/img/image 13.png">
+                                            src="./dist/img/image 13.png">
                                         <div class="tab__group__info">
                                             <div class="tab__group__title">Could walking help lower cancer risk?</div>
                                             <div class="tab__group__text">By <a href="#"
@@ -421,7 +421,7 @@
                                     </div>
                                     <div class="tab__group">
                                         <img loading="lazy" class="tab__group__image" alt=""
-                                            src="./public/img/image 14.png">
+                                            src="./dist/img/image 14.png">
                                         <div class="tab__group__info">
                                             <div class="tab__group__title">DNA recovered from Arctic lakes holds clues
                                                 for our future world</div>
@@ -432,7 +432,7 @@
                                     </div>
                                     <div class="tab__group">
                                         <img loading="lazy" class="tab__group__image" alt=""
-                                            src="./public/img/image 16.png">
+                                            src="./dist/img/image 16.png">
                                         <div class="tab__group__info">
                                             <div class="tab__group__title">How a volcanic eruption helped create modern
                                                 Scotland</div>
@@ -443,7 +443,7 @@
                                     </div>
                                     <div class="tab__group">
                                         <img loading="lazy" class="tab__group__image" alt=""
-                                            src="./public/img/image 18.png">
+                                            src="./dist/img/image 18.png">
                                         <div class="tab__group__info">
                                             <div class="tab__group__title">Archaeologists unearth graves of ancient
                                                 warrior women in Russia</div>
@@ -456,7 +456,7 @@
                                 <div class="tabs__groups" data-panel>
                                     <div class="tab__group">
                                         <img loading="lazy" class="tab__group__image" alt=""
-                                            src="./public/img/image 13.png">
+                                            src="./dist/img/image 13.png">
                                         <div class="tab__group__info">
                                             <div class="tab__group__title">Could walking help lower cancer risk?</div>
                                             <div class="tab__group__text">By <a href="#"
@@ -466,7 +466,7 @@
                                     </div>
                                     <div class="tab__group">
                                         <img loading="lazy" class="tab__group__image" alt=""
-                                            src="./public/img/image 14.png">
+                                            src="./dist/img/image 14.png">
                                         <div class="tab__group__info">
                                             <div class="tab__group__title">DNA recovered from Arctic lakes holds clues
                                                 for our future world</div>
@@ -477,7 +477,7 @@
                                     </div>
                                     <div class="tab__group">
                                         <img loading="lazy" class="tab__group__image" alt=""
-                                            src="./public/img/image 16.png">
+                                            src="./dist/img/image 16.png">
                                         <div class="tab__group__info">
                                             <div class="tab__group__title">How a volcanic eruption helped create modern
                                                 Scotland</div>
@@ -488,7 +488,7 @@
                                     </div>
                                     <div class="tab__group">
                                         <img loading="lazy" class="tab__group__image" alt=""
-                                            src="./public/img/image 18.png">
+                                            src="./dist/img/image 18.png">
                                         <div class="tab__group__info">
                                             <div class="tab__group__title">Archaeologists unearth graves of ancient
                                                 warrior women in Russia</div>
@@ -501,7 +501,7 @@
                                 <div class="tabs__groups" data-panel>
                                     <div class="tab__group">
                                         <img loading="lazy" class="tab__group__image" alt=""
-                                            src="./public/img/image 13.png">
+                                            src="./dist/img/image 13.png">
                                         <div class="tab__group__info">
                                             <div class="tab__group__title">Could walking help lower cancer risk?</div>
                                             <div class="tab__group__text">By <a href="#"
@@ -511,7 +511,7 @@
                                     </div>
                                     <div class="tab__group">
                                         <img loading="lazy" class="tab__group__image" alt=""
-                                            src="./public/img/image 14.png">
+                                            src="./dist/img/image 14.png">
                                         <div class="tab__group__info">
                                             <div class="tab__group__title">DNA recovered from Arctic lakes holds clues
                                                 for our future world</div>
@@ -522,7 +522,7 @@
                                     </div>
                                     <div class="tab__group">
                                         <img loading="lazy" class="tab__group__image" alt=""
-                                            src="./public/img/image 16.png">
+                                            src="./dist/img/image 16.png">
                                         <div class="tab__group__info">
                                             <div class="tab__group__title">How a volcanic eruption helped create modern
                                                 Scotland</div>
@@ -533,7 +533,7 @@
                                     </div>
                                     <div class="tab__group">
                                         <img loading="lazy" class="tab__group__image" alt=""
-                                            src="./public/img/image 18.png">
+                                            src="./dist/img/image 18.png">
                                         <div class="tab__group__info">
                                             <div class="tab__group__title">Archaeologists unearth graves of ancient
                                                 warrior women in Russia</div>
@@ -616,7 +616,7 @@
                 <div class="related-posts__grid">
                     <div class="related-posts__item">
                         <div class="related-posts__item-preview" data-label="Healthy Lifestyle">
-                            <img loading="lazy" class="related-posts__item-img" alt="" src="./public/img/image 13.png">
+                            <img loading="lazy" class="related-posts__item-img" alt="" src="./dist/img/image 13.png">
                         </div>
                         <div class="related-posts__item-content">
                             <div class="related-posts__item-title">Smarter Food Choices 101 Tips For Busy Women</div>
@@ -625,7 +625,7 @@
                     </div>
                     <div class="related-posts__item">
                         <div class="related-posts__item-preview" data-label="Healthy Lifestyle">
-                            <img loading="lazy" class="related-posts__item-img" alt="" src="./public/img/image 3.png">
+                            <img loading="lazy" class="related-posts__item-img" alt="" src="./dist/img/image 3.png">
                         </div>
                         <div class="related-posts__item-content">
                             <div class="related-posts__item-title">Smarter Food Choices 101 Tips For Busy Women</div>
@@ -634,7 +634,7 @@
                     </div>
                     <div class="related-posts__item">
                         <div class="related-posts__item-preview" data-label="Healthy Lifestyle">
-                            <img loading="lazy" class="related-posts__item-img" alt="" src="./public/img/image 38.png">
+                            <img loading="lazy" class="related-posts__item-img" alt="" src="./dist/img/image 38.png">
                         </div>
                         <div class="related-posts__item-content">
                             <div class="related-posts__item-title">Smarter Food Choices 101 Tips For Busy Women</div>
@@ -643,7 +643,7 @@
                     </div>
                     <div class="related-posts__item">
                         <div class="related-posts__item-preview" data-label="Healthy Lifestyle">
-                            <img loading="lazy" class="related-posts__item-img" alt="" src="./public/img/image 30.png">
+                            <img loading="lazy" class="related-posts__item-img" alt="" src="./dist/img/image 30.png">
                         </div>
                         <div class="related-posts__item-content">
                             <div class="related-posts__item-title">Smarter Food Choices 101 Tips For Busy Women</div>
@@ -693,7 +693,7 @@
             </div>
         </footer>
     </main>
-    <script src="./public/js/script.js"></script>
+    <script src="./dist/js/script.js"></script>
 </body>
 
 </html>
